updat for nginx 1.11.4

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,14 +10,19 @@ events {
 
 
 http {
+
     include            mime.types;
     default_type       application/octet-stream;
+
+    charset            UTF-8;
 
     sendfile           on;
     tcp_nopush         on;
     tcp_nodelay        on;
 
     keepalive_timeout  60;
+
+    #... ...#
 
     gzip               on;
     gzip_vary          on;
@@ -32,6 +37,11 @@ http {
     gzip_http_version  1.0;
 
     gzip_types         text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript image/svg+xml;
+
+    # 如果编译时添加了 ngx_brotli 模块，需要增加 brotli 相关配置
+    brotli             on;
+    brotli_comp_level  6;
+    brotli_types       text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript image/svg+xml;
 
     include            /usr/local/nginx/conf/conf.d/*.conf;
 }
